fix: Remove display:block from table to fix right whitespace

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -360,9 +360,6 @@ samp {
   border: 2px solid var(--om-ink);
   border-radius: 6px;
   overflow: hidden;
-  display: block;
-  overflow-x: auto;
-  max-width: 100%;
 }
 
 .page__content table th {
